still trying to fix the alignment

--- a/main/style.css
+++ b/main/style.css
@@ -15,7 +15,7 @@ html,body{
     content: "";
     background-image: url("backgroundImage.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-color: #ccc;
     background-blend-mode: darken, hard-light;
     top: 0;
@@ -205,6 +205,7 @@ nav a:hover{
     }
 
     .input-container input{ 
+        width: 15rem;
         margin:0 auto;
       }
 
